src/test/resources/json/invalid_inputs/no_y.json.except
Robot's starting Y position not given.